plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'uk.co.ams'
version = '0.0.1-SNAPSHOT'
description = 'Certificate Discovery Platform'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	awsSdkVersion = '2.54.13'
}

dependencies {
	implementation platform("software.amazon.awssdk:bom:${awsSdkVersion}")

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
	implementation 'org.hibernate.orm:hibernate-community-dialects:6.5.2.Final'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	// Real cloud access (used by the qa profile; the dev profile stays on mocks).
	// One module per scannable AWS service - adding a service to the discovery
	// catalogue means adding its SDK module here and nothing else to the build.
	implementation 'software.amazon.awssdk:sts'
	implementation 'software.amazon.awssdk:acm'                      // 1. ACM
	implementation 'software.amazon.awssdk:ssm'                      // 2. EC2 filesystem, via Run Command
	implementation 'software.amazon.awssdk:ec2'                      // 2. EC2 instance metadata and tags
	implementation 'software.amazon.awssdk:elasticloadbalancingv2'   // 3+4. ALB and NLB listeners
	implementation 'software.amazon.awssdk:cloudfront'               // 5. CloudFront distributions
	implementation 'software.amazon.awssdk:apigateway'               // 6. API Gateway v1 custom domains
	implementation 'software.amazon.awssdk:apigatewayv2'             // 6. API Gateway v2 custom domains
	implementation 'software.amazon.awssdk:iam'                      // IAM server certificates referenced by 3-6

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.wiremock:wiremock-standalone:3.9.1'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
